--- a/client/src/style.css
+++ b/client/src/style.css
@@ -12,8 +12,21 @@ canvas {
   left: 0;
 }
 
-.text-container {
+ main {
+  width: 100vw;
+  z-index: 99 ; 
   position: absolute;
-  /* background-color: rgb(168, 168, 168); */
+  /* display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(4, 1fr);  */
   
-}
+}   
+
+
+.slide {
+  /* grid-column: 8/12;
+  grid-row: 3/3; */
+  padding: 10px;
+  font-size: 100px;
+  background:none;
+} 
